# sierra-engine-editor

./: .gitignore  CMakeLists.txt  README.md
include/sierra/: consts.hpp  logger.hpp  utils.hpp
include/sierra/io/: io_utils.hpp  keyboard.hpp  mouse.hpp
include/sierra/project/: sentity.hpp  sproject.hpp  sscene.hpp
include/sierra/stateful/: selection_manager.hpp  stateful_manager.hpp
include/sierra/ui/widgets/: always_visible_tabwidget.hpp  asset_browser.hpp  console_output.hpp  generic_panel.hpp  hierarchy_panel.hpp  inspector_panel.hpp  profiler_panel.hpp  refreshable_panel.hpp  render_viewport.hpp  start_window_widget.hpp  start_window_widget_new_project.hpp
include/sierra/ui/window/: main_window.hpp
include/sierra/viewport/gl/: camera.hpp  mesh.hpp  viewport_gl.hpp
lresources/: NOTICE.txt
resources/: resources.qrc
shaders/: basic.frag  basic.vert
src/: main.cpp
src/io/: keyboard.cpp  mouse.cpp
src/project/: sentity.cpp  sproject.cpp  sscene.cpp
src/stateful/: stateful_manager.cpp
src/ui/widgets/: asset_browser.cpp  console_output.cpp  generic_panel.cpp  hierarchy_panel.cpp  inspector_panel.cpp  profiler_panel.cpp  render_viewport.cpp  start_window_widget.cpp  start_window_widget_new_project.cpp
src/ui/window/: main_window.cpp
src/viewport/gl/: camera.cpp  mesh.cpp  viewport_gl.cpp
styles/: dark.qss
